src/test/resources/valid_programs/logical_and__simple.notc
void main() {
    printInt(false && false);
    printInt(false && true);
    printInt(true  && false);
    printInt(true  && true);
    printInt(true  && true  && true  && true);
    printInt(false && false && false && false);
    printInt(true  && true  && false && true);
    printInt(false && true  && false && false);
}
