src/test/resources/semantic_errors/void_param.notc
bool fun(void param) {
    return true;
}

void main() {
}
